@@ -3,6 +3,9 @@
 ; This is the configuration file for the lwnetrouter system.
 ;
 
+;                                                                               
+; Be sure to set the multicast interface in '/var/cache/aoip/routing.db'!       
+;   
 [Global]
 InputQuantity=8
 OutputQuantity=8
@@ -10,6 +13,7 @@ RmlPort=5858
 CunctatorPort=3749
 
 [Audio]
+AdapterIpAddress=192.168.21.11
 DelayChangePercent=5
 InputBusXfers=No
 OutputBusXfers=Yes
