@@ -44,3 +44,6 @@
 	* Added a LiveWire GPIO protocol driver in
 	'src/lwnetrouterd/protocol_gpio.cpp' and
 	'src/lwnetrouterd/protocol_gpio.h'.
+2016-11-26 Fred Gleason <fredg@paravelsystems.com>
+	* Added a LiveWire GPIO router in 'src/lwnetrouterd/router_gpio.cpp'
+	and 'src/lwnetrouterd/router_gpio.h'.
